Fixed screen overflow

--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -9,6 +9,8 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
+    background-color: #444140;
+    overflow: hidden;
 }
 
 #root {
