--- a/frontend/src/components/MainPage/MainPage.scss
+++ b/frontend/src/components/MainPage/MainPage.scss
@@ -1,8 +1,11 @@
 .main {
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
     overflow-y: auto;
+    overflow-x: hidden;
     flex: 1;
 }
