--- a/frontend/src/components/Tab/Tab.scss
+++ b/frontend/src/components/Tab/Tab.scss
@@ -24,7 +24,7 @@
     background-color: #3c3837;
     font-family: Arial, sans-serif;
     letter-spacing: 0.05rem;
-    min-width: 280px;
+    min-width: 320px;
     max-width: 320px;
     color: #4DA1A9;
     flex: 1;
